@@ -22,6 +22,12 @@ luatex_ldadd = libluatex.a libff.a libluamisc.a libzzip.a libluasocket.a liblua5
 luatex_ldadd += $(LIBPNG_LIBS) $(ZLIB_LIBS) $(XPDF_LIBS)
 luatex_ldadd += $(OBSDCOMPAT_LIBS) libmd5.a libmplib.a 
 
+if WIN32
+else
+luatex_LDFLAGS = -Wl,-E
+luatex_ldadd += -ldl
+endif
+
 luatex_LDADD = $(luatex_ldadd) $(LDADD) $(lua_socketlibs)
 
 luatex_DEPENDENCIES = $(proglib) libluatex.a
